--- a/app/components/keeps/keep.html
+++ b/app/components/keeps/keep.html
@@ -13,7 +13,7 @@
 			<p>{{$ctrl.keep.body}}</p>
 			<hr>
 			<p class="text-center">
-				<a class="btn btn-theme" role="button">K</a>
+				<a class="btn btn-theme" role="button" ng-click="$ctrl.onKeepClick($ctrl.keep)">K</a>
 				<a class="btn btn-default" role="button"><i class="fa fa-share"></i></a>
 				<a class="btn btn-info" role="button"><i class="fa fa-eye"></i></a>
 			</p>
